--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev:server": "webpack --config webpack.server.js --watch",
-    "dev:start": "nodemon --watch build --exec node \"./build/bundle.\"js"
+    "dev:start": "nodemon --watch build --exec node \"./build/bundle.\"js",
+    "dev:client": "webpack --config webpack.client.js --watch"
   },
   "keywords": [],
   "author": "",
