--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "react-ssr",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev:server": "webpack --config webpack.server.js --watch",
     "dev:start": "nodemon --watch build --exec node \"./build/bundle.\"js",
-    "dev:client": "webpack --config webpack.client.js --watch"
+    "dev:client": "webpack --config webpack.client.js --watch",
+    "start": "concurrently \"npm run dev:server\" \"npm run dev:start\" \"npm run dev:client\""
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
+    "concurrently": "^5.2.0",
     "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
